Thu Jul 27 20:29:49 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/text-entry.c:
	  - Make IRC command completion case unsensitive.
	  
Thu Jul 27 18:48:31 CEST 2006  Guillaume Desmottes <cass@skynet.be>
	
	* data/preferences-dialog.glade:
	  - HIG improvements: don't display preferences window in the
	    windows list and make it transient.

2006-07-27  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/fe-gnome.c: (fe_args), (fe_init), (fe_cleanup):
	  - Drop unnecessary code to init gnome-vfs and load/store the accel
	    map. Bug #348868.

2006-07-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/common/dbus/Makefile.am:
	* src/common/dbus/dbus-plugin.c:
	  - Fix the build in the builddir != srcdir case. Bug #348867.

Sun Jul 23 17:59:55 PDT 2006  David Trowbridge <trowbrds@gmail.com>

	D plugins/dbus:
	D plugins/dbus/Makefile.am:
	D plugins/dbus/README:
	D plugins/dbus/dbus-plugin.c:
	D plugins/dbus/dbus-plugin.xml:
	D plugins/dbus/example.c:
	D plugins/dbus/marshallers.list:
	D plugins/dbus/xchat-gnome-remote.c:
	D plugins/dbus/xchat_gnome_url_handler.schemas.in:
	A src/common/CVS/Entries.Log:
	A src/common/dbus:
	A src/common/dbus/CVS:
	A src/common/dbus/CVS/Entries:
	A src/common/dbus/CVS/Repository:
	A src/common/dbus/CVS/Root:
	A src/common/dbus/Makefile.am:
	A src/common/dbus/README:
	A src/common/dbus/dbus-plugin.c:
	A src/common/dbus/dbus-plugin.h:
	A src/common/dbus/dbus-plugin.xml:
	A src/common/dbus/example.c:
	A src/common/dbus/example.py:
	A src/common/dbus/marshallers.list:
	A src/common/dbus/url_handler.schemas.in:
	A src/common/dbus/xchat-remote.c:
	* configure.ac:
	* po/POTFILES.in:
	* src/common/CVS/Entries:
	* src/common/Makefile.am:
	* src/common/cfgfiles.c:
	* src/common/dcc.c:
	* src/common/dcc.h:
	* src/common/fe.h:
	* src/common/inbound.c:
	* src/common/outbound.c:
	* src/common/outbound.h:
	* src/common/plugin.c:
	* src/common/proto-irc.c:
	* src/common/server.c:
	* src/common/text.c:
	* src/common/util.c: