@@ -22,8 +22,8 @@ LIBGLADE_REQUIRED=2.3.0
 LIBGNOMEVFS_REQUIRED=2.9.2
 LIBGNOMEUI_REQUIRED=2.6.0
 GCONF_REQUIRED=2.8.0
-DBUS_REQUIRED=0.35
-DBUS_GLIB_REQUIRED=0.35
+DBUS_REQUIRED=0.60
+DBUS_GLIB_REQUIRED=0.60
 LIBSEXY_REQUIRED=0.1.7
 LIBNOTIFY_REQUIRED=0.3.2
 
